Fix collapsing navbar

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,14 @@
 	position: absolute;
 	top: 0px;
 	left: 30px;
+	z-index: 2;
 }
+
+.navbar-collapse
+{
+	background-color: #1a1a1a;
+}
+
 
 .navbar-nav
 {
@@ -510,6 +517,13 @@ button[type=submit]
 	.responsive-header-main { width: 150px;}
 	.credentials:before {right:47px;}
 	.cta-block {padding: 4rem 3rem; background-attachment: initial;}
+	.navbar-collapse {width: 100%; padding: 60px 20px 20px 40px; z-index: 1; margin-top: 60px;}
+	.navbar {padding: 0 0 0 0; min-height: 60px; }
+	.nav-item {font-size: 1rem; margin: 0;}
+	.nav-link.active {border: none;}]
+	button.navbar-toggler {z-index: 2 !important;}
+
+{
 
 }
 
